mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_invalid_op.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Operator '+' is not supported between types string and int
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_invalid_op.mux:2:18
   |
 2 | auto a = "str" + 1
   |                  ^
   |
= help: Strings and integers cannot be combined directly. Use int_to_string() to convert the integer first, then concatenate with '++'.
